--- a/src/app/components/client-form/client-form.component.html
+++ b/src/app/components/client-form/client-form.component.html
@@ -1,1 +1,24 @@
-<p>client-form works!</p>
+<form [formGroup]="form" (ngSubmit)="send()">
+  <h2>Formulář pro zadání údajů klienta</h2>
+    <div>
+      <label for="companyName">Název Společnosti:</label>
+      <input id="companyName" type="text" formControlName="companyName">
+    </div>
+    <div>
+      <label for="companyAdress">Adresa:</label>
+      <input id="companyAdress" type="text" formControlName="companyAdress">
+    </div>
+    <div>
+      <label for="companyEmail">Email:</label>
+      <input id="companyEmail" type="email" formControlName="companyEmail">
+    </div>
+    <div>
+      <label for="companyTel">Tel. kontakt:</label>
+      <input id="companyTel" type="number" formControlName="companyTel">
+    </div>
+    <div>
+      <label for="companyIco">IČO:</label>
+      <input id="companyIco" type="number" formControlName="companyIco">
+    </div>
+    <button type="submit" [disabled]="!form.valid">Odeslat</button>
+  </form>
