--- a/src/app/components/submission-confirmation/submission-confirmation.component.html
+++ b/src/app/components/submission-confirmation/submission-confirmation.component.html
@@ -1,1 +1,4 @@
-<p>Děkujeme za projevenou důvěru</p>
+<div class="thank-you-container">
+    <p class="thank-you-message">Děkujeme za projevenou důvěru.</p>
+    <p class="thank-you-submessage">Vaše údaje jsou u nás v bezpečí.</p>
+  </div>
