--- a/src/app/components/client-form/client-form.component.html
+++ b/src/app/components/client-form/client-form.component.html
@@ -1,24 +1,24 @@
-<form [formGroup]="form" (ngSubmit)="send()">
-  <h2>Formulář pro zadání údajů klienta</h2>
-    <div>
-      <label for="companyName">Název Společnosti:</label>
-      <input id="companyName" type="text" formControlName="companyName">
-    </div>
-    <div>
-      <label for="companyAdress">Adresa:</label>
-      <input id="companyAdress" type="text" formControlName="companyAdress">
-    </div>
-    <div>
-      <label for="companyEmail">Email:</label>
-      <input id="companyEmail" type="email" formControlName="companyEmail">
-    </div>
-    <div>
-      <label for="companyTel">Tel. kontakt:</label>
-      <input id="companyTel" type="number" formControlName="companyTel">
-    </div>
-    <div>
-      <label for="companyIco">IČO:</label>
-      <input id="companyIco" type="number" formControlName="companyIco">
-    </div>
-    <button type="submit" [disabled]="!form.valid">Odeslat</button>
-  </form>
+<form [formGroup]="form" (ngSubmit)="send()" class="form-container">
+  <h2 class="form-title">Formulář pro zadání údajů klienta</h2>
+  <div class="form-group">
+    <label for="companyName">Název Společnosti:</label>
+    <input id="companyName" type="text" formControlName="companyName" class="form-input">
+  </div>
+  <div class="form-group">
+    <label for="companyAdress">Adresa:</label>
+    <input id="companyAdress" type="text" formControlName="companyAdress" class="form-input">
+  </div>
+  <div class="form-group">
+    <label for="companyEmail">Email:</label>
+    <input id="companyEmail" type="email" formControlName="companyEmail" class="form-input">
+  </div>
+  <div class="form-group">
+    <label for="companyTel">Tel. kontakt:</label>
+    <input id="companyTel" type="tel" formControlName="companyTel" class="form-input">
+  </div>
+  <div class="form-group">
+    <label for="companyIco">IČO:</label>
+    <input id="companyIco" type="number" formControlName="companyIco" class="form-input">
+  </div>
+  <button type="submit" [disabled]="!form.valid" class="form-button">Odeslat</button>
+</form>
